--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -11,3 +11,14 @@
 .footer {
   background-color: #f5f5f5;
 }
+
+.text {
+	text-transform: uppercase;
+	background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	font: {
+		size: 20vw;
+		family: $font;
+	};
+}
