--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -22,3 +22,17 @@
 		family: $font;
 	};
 }
+
+
+* {
+   margin: 0;
+   padding: 0;
+}
+
+html {
+   overflow: hidden;
+}
+
+canvas {
+   cursor:none;
+}
