--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -13,6 +13,7 @@
 }
 
 .text {
+	font-weight: bold;
 	 text-transform: uppercase; 
 	background: linear-gradient(to right, #30CFD0 0%, #330867 100%);
 	-webkit-background-clip: text;
