--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -2,15 +2,15 @@
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */
 
+body {
+  background-color: #defff9;
+}
+
 .container {
   width: auto;
   max-width: 680px;
   padding: 0 15px;
 	 background-color: #defff9;
-}
-
-.footer {
-  background-color: #defff9;
 }
 
 .text {
