--- a/sticky-footer.css
+++ b/sticky-footer.css
@@ -3,7 +3,7 @@
 /* Not required for template or sticky footer method. */
 
 body {
-  background-color: #defff9;
+  background-color: #f2fffd;
 }
 
 .container {
